prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/scalar_expected.nut
// EXPECT_ERROR: "scalar expected"
enum BadEnum {
    A = [1, 2, 3]
}
